# PenTip

./: .env.example  .gitignore  AGENTS.md  README.md  README_CN.md  check-deps.mjs  check-versions.ps1  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: 001_create_tables.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  file.rs  fragment.rs  mod.rs  notes.rs  page.rs  project.rs  tag.rs
src-tauri/src/db/: database.rs  mod.rs  queries.rs
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/services/: config.rs  file.rs  fragment.rs  mod.rs  page.rs  project.rs  tag.rs
src-tauri/src/utils/: error.rs  helpers.rs  mod.rs
src-tauri/src/utils/config/: ai_providers.rs  app.rs  mod.rs  shortcuts.rs
src-tauri/tests/: tests.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/unit/: queries.rs
src/api/: config.ts  fragment.ts  index.ts  page.ts  project.ts  search.ts  tag.ts
src/composables/: useQuickCapture.ts  useShortcuts.ts  useTheme.ts
src/i18n/: index.ts
src/router/: index.ts
src/services/: index.ts
src/stores/: app.ts  config.ts  notes.ts  projects.ts  settings.ts
src/styles/: main.scss  markdown.scss  variables.scss
src/types/: app-config.ts  error.ts  fragment.ts  index.ts  note.ts  page.ts  project.ts  shortcuts-config.ts  tag.ts
src/utils/: crypto.ts  date.ts  format.ts  index.ts  markdown.ts  naive-ui.ts
src/views/: Editor.vue  (+4 more)
(+6 files in other folders)
